<resources>
    <string name="app_name">LoginWithRetrofit</string>

    <!-- UI components -->
    <!-- Login screen -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="registerHere">Register here</string>
    <string name="accountIconImageDescription">Round Account Icon</string>

    <!-- Register screen -->
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="email">email</string>
    <string name="loginHere">Already have an account? Click here to log in!</string>
    <string name="register">Register</string>

    <!-- Profile screen -->
    <string name="accountIdProfile">Account Id: </string>
    <string name="name">Name: </string>
    <string name="usernameProfile">Username: </string>
    <string name="emailProfile">Email: </string>
    <string name="joinedProfile">Member since: </string>
    <string name="isNull"> is null</string>

    <string name="logout">Logout</string>
    <string name="backgroundImageDescription">Colorful background Image</string>

    <string name="placeholder">placeholder</string>

</resources>
