<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miamirecki.loginwithretrofit.RegisterActivity"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/rlRegister"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@color/primary_light"
        android:elevation="8dp">

        <EditText
            android:id="@+id/etFirstNameRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/firstName"
            android:padding="10dp"
            android:layout_above="@+id/etLastNameRegister"
            android:layout_alignLeft="@+id/etLastNameRegister"
            android:layout_alignStart="@+id/etLastNameRegister" />

        <EditText
            android:id="@+id/etLastNameRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/lastName"
            android:padding="10dp"
            android:layout_above="@+id/etEmailRegister"
            android:layout_alignLeft="@+id/etEmailRegister"
            android:layout_alignStart="@+id/etEmailRegister" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_above="@+id/etUsernameRegister"
            android:layout_alignLeft="@+id/etUsernameRegister"
            android:layout_alignStart="@+id/etUsernameRegister" />

        <EditText
            android:id="@+id/etUsernameRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:padding="10dp"
            android:visibility="visible"
            android:layout_above="@+id/etPasswordRegister"
            android:layout_alignLeft="@+id/etPasswordRegister"
            android:layout_alignStart="@+id/etPasswordRegister" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:visibility="visible"
            android:layout_marginBottom="13dp"
            android:layout_above="@+id/bRegister"
            android:layout_alignLeft="@+id/bRegister"
            android:layout_alignStart="@+id/bRegister" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_background"
            android:elevation="8dp"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/accent"
            android:visibility="visible"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/tvLoginHere"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvLoginHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHere"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/ivAccountIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:background="@drawable/icon_rounded_background"
        android:elevation="8dp"
        app:srcCompat="@mipmap/ic_account_circle_white_48dp"
        android:contentDescription="@string/accountIconImageDescription"/>


</FrameLayout>
