<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triangle">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.miamirecki.loginwithretrofit.LoginActivity">

    <LinearLayout
        android:id="@+id/llLoginInfoCard"
        style="@style/InfoCard">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp">

            <EditText
                android:id="@+id/etUsernameRegister"
                android:hint="@string/username"
                style="@style/FormField"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPasswordLogin"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/FormField"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/bLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_rounded_background"
            android:elevation="2dp"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/accent"/>

        <TextView
            android:id="@+id/tvRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/registerHere" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivAccountIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@drawable/icon_rounded_background"
        android:contentDescription="@string/accountIconImageDescription"
        android:elevation="2dp"
        app:srcCompat="@mipmap/ic_account_circle_white_48dp" />


</FrameLayout>

</ScrollView>