<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miamirecki.loginwithretrofit.ProfilePageActivity"
    android:background="@drawable/triangle">

    <FrameLayout
        android:id="@+id/flMainFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/InfoCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    style="@style/ProfileInfoFieldLabel"
                    android:text="@string/accountIdProfile" />

                <TextView
                    android:id="@+id/tvAccountIDProfile"
                    style="@style/ProfileInfoField"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/ProfileInfoFieldLabel"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvNameProfile"
                    style="@style/ProfileInfoField" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/ProfileInfoFieldLabel"
                    android:text="@string/usernameProfile" />

                <TextView
                    android:id="@+id/tvUsernameProfile"
                    style="@style/ProfileInfoField"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/ProfileInfoFieldLabel"
                    android:text="@string/emailProfile" />

                <TextView
                    android:id="@+id/tvEmailProfile"
                    style="@style/ProfileInfoField"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:orientation="horizontal">

                <TextView
                    style="@style/ProfileInfoFieldLabel"
                    android:text="@string/joinedProfile"/>

                <TextView
                    android:id="@+id/tvJoinedProfile"
                    style="@style/ProfileInfoField"/>

             </LinearLayout>

            <Button
                android:id="@+id/btnLogoutProfile"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                android:text="@string/logout"
                android:background="#e57373"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:elevation="2dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </FrameLayout>

</ScrollView>
